# VontiveTech

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py  state.py
src/agent/: __init__.py  graph.py
src/extraction/: extractor.py  prompts.py
src/tools/: dataset_tools.py  document_loader.py  test_accuracy.py
src/utils/: logging_config.py
src/validation/: validator.py
tests/: consolidate_results.py  create_ground_truth_template.py
tests/test_data/: accuracy_report.json  agent_results.json  ground_truth.json
