[project]
name = "tax-cert-agent"
version = "0.1.0"
description = "AI agent for extracting structured data from property tax documents"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.50",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
